--- a/public/ml/first-ml-post/index.html
+++ b/public/ml/first-ml-post/index.html
@@ -135,7 +135,7 @@
         </main>
         <footer class="footer">
     <div class="footer-content">
-        
+        © 2025 Vishak Gopkumar
     </div>
 </footer>
  
