--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
         </main>
         <footer class="footer">
     <div class="footer-content">
-        
+        © 2025 Vishak Gopkumar
     </div>
 </footer>
  
